--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,7 @@ APP_SECRET=b44d945cb09c0203b9ffd7569679823c
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/winscript
+DATABASE_URL=mysql://root:1234win@127.0.0.1:3306/winscript
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
