--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,8 +4,7 @@ security:
             algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
-        in_database:
+        main:
             entity:
                 class: App\Entity\Utilisateur
                 property: username
@@ -13,18 +12,28 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        
+        login:
+            pattern: ^/login$
+            anonymous: true
+            form_login:
+                login_path: login
+                check_path: login_check
+                default_target_path: home
+
+        register:
+            pattern: ^/inscription$
+            anonymous: true
+
         main:
             pattern: ^/
-            anonymous: ~
-            provider: in_database
-
+            anonymous: false
             form_login:
-                login_path: security_login
-                check_path: security_login
-
+                login_path: login
+                check_path: login_check
             logout:
-                path: security_logout
-                target: /security_login
+                path: /logout
+                target: /login
 
             # activate different ways to authenticate
 
@@ -39,5 +48,5 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-          - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-   
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY }
