--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+logout:
+    path: /logout
+
+login_check:
+    path: /login_check
